[project]
name = "UploadToWebhookPushOver"
description = "Send generated image to PushOver API webhook choose for only notification or add the image result as well."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "requests", "Pillow"]

[project.urls]
Repository = "https://github.com/MijnSpam/ComfyUI_UploadToWebhookPushOver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "MijnSpam"
DisplayName = "ComfyUI_UploadToPushOver"

