[project]
name = "UploadToPushOver"
description = "Send generated image to PushOver API webhook choose for only notification or add the image result as well. It can connect to anything if you just want a notification somewhere in your workflow"
version = "1.2.2"
license = { file = "LICENSE"}
dependencies = ["numpy", "requests", "Pillow"]

[project.urls]
Repository = "https://github.com/MijnSpam/UploadToPushOver"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kbrambo"
DisplayName = "Upload to PushOver"
Icon = "https://github.com/MijnSpam/UploadToPushOver/blob/main/images/icon.png?raw=true"
